modified:   ks_dashboard_ninja/static/src/css/style.css

--- a/ks_dashboard_ninja/static/src/css/style.css
+++ b/ks_dashboard_ninja/static/src/css/style.css
@@ -752,7 +752,7 @@ body:not(.o_touch_device) .o_field_selection:not(:hover):not(:focus-within) sele
 
 .ks_dashboard_header,
 [data-color-mode="ks-dn-dark"] .ks_dashboard_header {
-    background: var(--ks-dn-black-600) !important;
+    background: var(--ks-dn-gray-200) !important;
     border: 0 !important;
 }
 
